...
                                .frame(maxWidth: .infinity)
                            )
                    }
                    .sheet(isPresented: $showingAllWorkouts) {
                        PreviousWorkouts().environmentObject(appState)
                    }
                    .accessibilityIdentifier("Workout History")
                    
                    // "Compare Workouts" button
                    NavigationLink(destination: CompareWorkoutsView()) {
                        RoundedRectangle(cornerRadius: 10)
                            .frame(width: 175, height: 100) // Square shape
                            .foregroundColor(Color(red: 182/255, green: 4/255, blue: 42/255))
                            .overlay(Text("Compare Workouts")
                                .foregroundColor(.white)
...
                
                // Page label and "Create" button
                .navigationTitle("Workout Dashboard")
                .toolbar {
                    NavigationLink(destination: Workouts().environmentObject(appState)) {
                        Image(systemName: "plus")
                            .accessibilityLabel("NavigateToWorkouts")
                            .accessibilityIdentifier("NavigateToWorkouts")

                    }
                }
                
                // Label for recent workouts
...
